--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -213,10 +213,22 @@ a i.fa-clock-o {
   }
 
   .scraper-lang {
-    margin-top: .2em;
-    padding-left: .5em;
+    margin: .2em 0 0 .25em;
     color: lighten($gray-light, 10%);
     font-weight: bold;
+  }
+
+  .icon-box {
+    margin: 0 .25em;
+
+    .spinner,
+    i {
+     vertical-align: text-top;
+   }
+
+    + .icon-box {
+      margin: 0 .25em 0 .5em;
+    }
   }
 }
 
