--- a/app/views/scrapers/_history.html.haml
+++ b/app/views/scrapers/_history.html.haml
@@ -6,3 +6,10 @@
     %ul.list-group
       - scraper.finished_runs.each do |run|
         = render partial: "runs/history", locals: {run: run}
+      %li.list-group-item
+        - if scraper.scraperwiki_url
+          Forked from
+          = link_to "ScraperWiki", scraper.scraperwiki_url, target: "_blank"
+        - else
+          Created on morph.io
+        = timeago_tag(scraper.created_at, force: true)
