--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -216,10 +216,17 @@ a i.fa-clock-o {
     margin: .2em 0 0 .25em;
     color: lighten($gray-light, 10%);
     font-weight: bold;
+    width: 4em;
+    text-align: right;
   }
 
   .icon-box {
     margin: 0 .25em;
+    text-align: center;
+
+    @media (min-width: $grid-float-breakpoint) {
+      width: 3em;
+    }
 
     .spinner,
     i {
