keep the icons in the same place when scaper language not defined
This catches a corner case where the scraper has no defined
language so the icons moved into the place of the language element
and the vertical alignment was broken.

This looks very strange on very small screens with the missing
language element, so I've only made it kick in once screens are
a little wider.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -236,6 +236,14 @@ a i.fa-clock-o {
     + .icon-box {
       margin: 0 .25em 0 .5em;
     }
+
+    // make sure layout is the same if
+    // there's no .scraper-lang element.
+    &:first-child {
+      @media (min-width: 30em) {
+        margin-right: 54px;
+      }
+    }
   }
 }
 
