set the icons further apart as soon as there is space
This moves the 'running' and 'on timer' icons further apart on
smaller screens.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -224,7 +224,7 @@ a i.fa-clock-o {
     margin: 0 .25em;
     text-align: center;
 
-    @media (min-width: $grid-float-breakpoint) {
+    @media (min-width: 37em) {
       width: 3em;
     }
 
