--- a/app/views/application/_search_banner.html.haml
+++ b/app/views/application/_search_banner.html.haml
@@ -10,8 +10,9 @@
           %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
           .input-group-btn
             %button.btn.btn-primary{type: "submit"} Search
-        %p.search-suggestions
-          Try #{link_to "parliament", search_path(q: "parliament")},
-          #{ link_to "planning", search_path(q: "planning")} or
-          #{ link_to "Ghana", search_path(q: "Ghana")}
+        - if @q.blank?
+          %p.search-suggestions
+            Try #{link_to "parliament", search_path(q: "parliament")},
+            #{ link_to "planning", search_path(q: "planning")} or
+            #{ link_to "Ghana", search_path(q: "Ghana")}
 
