--- a/app/views/application/_search_banner.html.haml
+++ b/app/views/application/_search_banner.html.haml
@@ -4,7 +4,9 @@
       =form_tag search_path, method: "get", class: "form-inline" do
         %h1.label-heading
           %small.pre-heading Find data and code you can use
-          %label Search over #{pluralize(Scraper.count, "scraper")}
+          %label
+            Search over
+            = pluralize(floor_to_hundreds(Scraper.count), "scraper")
         .input-group.col-sm-12.col-md-9.col-lg-8
           = hidden_field_tag :type, @type
           %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
