Return country search with decent results and add url search

--- a/app/views/application/_search_banner.html.haml
+++ b/app/views/application/_search_banner.html.haml
@@ -15,5 +15,5 @@
         - if @q.blank?
           %p.search-suggestions
             Try #{link_to "parliament", search_path(q: "parliament")},
-            #{ link_to "planning", search_path(q: "planning")} or
-            #{ link_to "Ghana", search_path(q: "Ghana")}
+            #{ link_to "gov.uk", search_path(q: "gov.uk")} or
+            #{ link_to "slovakia", search_path(q: "slovakia")}
