--- a/app/views/application/_search_banner.html.haml
+++ b/app/views/application/_search_banner.html.haml
@@ -1,19 +1,15 @@
-.banner-search.banner
-  .container
-    .search-header
-      =form_tag search_path, method: "get", class: "form-inline" do
-        %h1.label-heading
-          %small.pre-heading Find data and code you can use
-          %label
-            Search over
-            = pluralize(floor_to_hundreds(Scraper.count), "scraper")
-        .input-group.col-sm-12.col-md-9.col-lg-8
-          = hidden_field_tag :type, @type
-          %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
-          .input-group-btn
-            %button.btn.btn-primary{type: "submit"} Search
-        - if @q.blank?
-          %p.search-suggestions
-            Try #{link_to "parliament", search_path(q: "parliament")},
-            #{ link_to "gov.uk", search_path(q: "gov.uk")} or
-            #{ link_to "slovakia", search_path(q: "slovakia")}
+.search-header
+  =form_tag search_path, method: "get", class: "form-inline" do
+    %h1.label-heading
+      %small.pre-heading Find data and code you can use
+      %label Search over #{pluralize(Scraper.count, "scraper")}
+    .input-group.col-sm-12.col-md-9.col-lg-8
+      = hidden_field_tag :type, @type
+      %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
+      .input-group-btn
+        %button.btn.btn-primary{type: "submit"} Search
+    - if @q.blank?
+      %p.search-suggestions
+        Try #{link_to "parliament", search_path(q: "parliament")},
+        #{ link_to "gov.uk", search_path(q: "gov.uk")} or
+        #{ link_to "slovakia", search_path(q: "slovakia")}
