--- a/app/views/application/_search_banner.html.haml
+++ b/app/views/application/_search_banner.html.haml
@@ -1,8 +1,6 @@
 .search-header
   =form_tag search_path, method: "get", class: "form-inline" do
-    %h1.label-heading
-      %small.pre-heading Find data and code you can use
-      %label Search over #{pluralize(Scraper.count, "scraper")}
+    %label.sr-only{for: "query"} Search
     .input-group.col-sm-12.col-md-9.col-lg-8
       = hidden_field_tag :type, @type
       %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
