--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -1,5 +1,8 @@
 .banner-search.banner
   .container
+    %h1.label-heading
+      %small.pre-heading Find data and code you can use
+      Search over #{pluralize(floor_to_hundreds(Scraper.count), "scraper")}
     = render partial: "search_banner"
 
 .container
