--- a/app/views/application/_search_banner.html.haml
+++ b/app/views/application/_search_banner.html.haml
@@ -1,13 +1,12 @@
-.search-header
-  =form_tag search_path, method: "get", class: "form-inline" do
-    %label.sr-only{for: "query"} Search
-    .input-group.col-sm-12.col-md-9.col-lg-8
-      = hidden_field_tag :type, @type
-      %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
-      .input-group-btn
-        %button.btn.btn-primary{type: "submit"} Search
-    - if @q.blank?
-      %p.search-suggestions
-        Try #{link_to "parliament", search_path(q: "parliament")},
-        #{ link_to "gov.uk", search_path(q: "gov.uk")} or
-        #{ link_to "slovakia", search_path(q: "slovakia")}
+=form_tag search_path, method: "get", class: "search-form form-inline" do
+  %label.sr-only{for: "query"} Search
+  .input-group.col-sm-12.col-md-9.col-lg-8
+    = hidden_field_tag :type, @type
+    %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
+    .input-group-btn
+      %button.btn.btn-primary{type: "submit"} Search
+  - if @q.blank?
+    %p.search-suggestions
+      Try #{link_to "parliament", search_path(q: "parliament")},
+      #{ link_to "gov.uk", search_path(q: "gov.uk")} or
+      #{ link_to "slovakia", search_path(q: "slovakia")}
