--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -46,6 +46,14 @@
   }
 }
 
+.banner-add-scraper {
+  padding-bottom: 24px;
+
+  @media (min-width: $screen-md-min) {
+    padding-bottom: 48px;
+  }
+}
+
 .banner-wrapper {
   background-color: #716b58;
 }
