--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -6,7 +6,7 @@
     = render partial: "search_form"
 
 - if current_user.scrapers.empty?
-  .banner
+  .banner-add-scraper.banner
     .container
       %h2 Unlock the data you need
       = link_to "Create your first scraper", new_scraper_path, class: "btn btn-primary btn-lg"
