Decrease size of heading to focus more on button

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -8,7 +8,7 @@
 - if current_user.scrapers.empty?
   .banner-add-scraper.banner
     .container
-      %h2 Unlock the data you need
+      %h2.h3 Unlock the data you need
       = link_to "Create your first scraper", new_scraper_path, class: "btn btn-primary btn-lg"
 
 .container
