Slightly reduce prominence of heading
To match search banner sub heading and put focus on button.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -52,6 +52,10 @@
   @media (min-width: $screen-md-min) {
     padding-bottom: 48px;
   }
+
+  h2 {
+    font-weight: normal;
+  }
 }
 
 .banner-wrapper {
