Match the new scraper heading size to search heading on small screens
This requires using css to define the heading size at all sizes,
so remove the '.h3' class.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -54,7 +54,12 @@
   }
 
   h2 {
-    font-weight: normal;
+    font-size: $font-size-h4;
+
+    @media (min-width: $screen-sm-min) {
+      font-size: $font-size-h3;
+      font-weight: normal;
+    }
   }
 }
 
