Add a little space between buttons and notice for wide screens

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -126,6 +126,14 @@
   }
 }
 
+.scraper-download-block {
+  .btn-group a:last-child {
+    @media (min-width: $screen-md-min) {
+      margin-right: .5em;
+    }
+  }
+}
+
 .download-privacy-notice {
   margin-top: 1em;
   display: inline-block;
