Add an info alert style to the downloads notice above table
This also styles the notice to be smaller than default by
reducing the padding.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -137,6 +137,10 @@
 .download-privacy-notice {
   margin-top: 1em;
   display: inline-block;
+
+  &.alert {
+    padding: 0.25em .5em;
+  }
 }
 
 .popover-content {
