Make the download notice layout css more robust
This is so that the layout of the section is consistent whether
or not the notice is present.

This moves the margin setting to downloads block off the nav tabs
from the alert, and onto the wrapping block div. Then the internal
and bottom spacing is added on the inner elements.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -127,16 +127,23 @@
 }
 
 .scraper-download-block {
-  .btn-group a:last-child {
-    @media (min-width: $screen-md-min) {
-      margin-right: .5em;
+  margin-top: 1em;
+
+  .btn-group {
+    margin-bottom: 1em;
+
+    a:last-child {
+      @media (min-width: $screen-md-min) {
+        margin-right: .5em;
+      }
     }
   }
 }
 
 .download-privacy-notice {
-  margin-top: 1em;
+  margin: 0 0 1em;
   display: inline-block;
+  vertical-align: top;
 
   &.alert {
     padding: 0.25em .5em;
