--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -16,6 +16,6 @@
             = f.input_field :name, class: "form-control", placeholder:"city_of_sydney_development_applications"
           %span.help-block Name to give the scraper here and on GitHub
 
-    = f.input :description, label: "Description (optional)"
+    = f.input :description, label: "Description"
 
     = f.button :submit
