--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -9,7 +9,7 @@
           %p.scraper-data-usage
             %strong
               Downloaded
-              = pluralize(scraper.api_queries.count, "time")
+              = pluralize(scraper.download_count, "time")
             - if scraper.api_queries.any?
               by
               - scraper.download_count_by_owner.each do |downloader,count|
