--- a/app/views/owners/settings.html.haml
+++ b/app/views/owners/settings.html.haml
@@ -35,5 +35,5 @@
     = simple_form_for @owner do |f|
       = f.input :buildpacks, as: :boolean, hint: "Add experimental support for Heroku buildpacks. Allows the installation of custom libraries, etc.."
       - if @owner.user?
-        = f.input :see_downloads, as: :boolean, hint: "This user can see information on who downloaded what data, etc..."
+        = f.input :see_downloads, as: :boolean, hint: "See all downloads include those before #{ApiQuery::VISIBLE_CUT_OFF_DATE}", label: "See all downloads"
       = f.button :submit, "Update feature settings"
