--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -143,7 +143,7 @@
   .download-privacy-notice {
     margin: 0 0 1em;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
 
     &.alert {
       padding: 0.25em .5em;
