--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -23,8 +23,8 @@
         - else
           - # TODO Make these filters actually work, this is a prototype
           .list-filters.btn-group
-            = link_to "Only scrapers with data", "", class: "active btn btn-default"
-            = link_to "All scrapers", "", class: "btn btn-default"
+            = link_to "Only scrapers with data", search_path(q: @q), class: "btn btn-default #{('active' unless @show == 'all')}"
+            = link_to "All scrapers", search_path(q: @q, show: "all"), class: "btn btn-default #{('active' if @show == 'all')}"
           - @scrapers.with_details.each do |scraper, details|
             = render scraper, highlight: details[:highlight]
           = paginate @scrapers
