--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -4,7 +4,7 @@
   = render partial: "search_form"
 
   - if @q
-    - if !@scrapers_total_count.zero? || @owners.any?
+    - if !@scrapers_total_count.zero? || !@owners.empty?
       .search-results
         %ul.search-type-nav.nav.nav-tabs
           %li{class: ('active' unless @type == "users"), role: "presentation"}
@@ -33,7 +33,7 @@
           .alert.alert-info
             Sorry, we couldn’t find any users relevant to your search term
             %strong “#{@q}”.
-        - elsif @type != "users" && @owners.any? && @scrapers_total_count.zero?
+        - elsif @type != "users" && !@owners.empty? && @scrapers_total_count.zero?
           .alert.alert-info
             Sorry, we couldn’t find any scrapers relevant to your search term
             %strong “#{@q}”.
