Add padding to the bottom of <h1> scraper full name
This is to make sure the descenders of characters in the headings
don't get cut off by the overflow:hidden;. Hidden is set to stop
long headings breaking the layout.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -321,6 +321,7 @@ a i.fa-clock-o {
 }
 
 h1.full_name {
+  padding-bottom: 1.2; // compensate for overflow:hidden, keep descenders visible
   overflow: hidden;
   text-overflow: ellipsis;
 }
