--- a/app/views/documentation/scraping_javascript_sites.html.haml
+++ b/app/views/documentation/scraping_javascript_sites.html.haml
@@ -6,13 +6,34 @@
   However in some cases you need to simulate a web browser.
   This could be because the web site is poorly programmed or because it makes extensive use of JavaScript.
 
-  You can do this with [PhantomJS](http://phantomjs.org/) which is essentially a headless browser that you can control from your scraper using JavaScript or a wrapper library.
-  The PhantomJS binary, `/usr/bin/phantomjs`, is installed on morph.io as part of the `phantomjs` Ubuntu package, which is installed in every scraper container as [part of the build process](https://github.com/openaustralia/morph-docker-buildstep-base/blob/master/Dockerfile#L27).
+  You can do this by using a headless browser. On morph.io there are two different headless browsers
+  pre-installed ready for you to use, [Google Chrome](https://www.google.com/chrome/)
+  and [PhantomJS](http://phantomjs.org/).
+  We recommend using Google Chrome as PhantomJS is now deprecated. However, you will notice the
+  documentation below for using Google Chrome from different scraping languages is pretty non-existent.
+  If you would like to contribute to the documentation that would be amazing!
+
+%h3 Using Chrome Headless
+:markdown
+  The Google Chrome binary is installed at `/usr/bin/google-chrome` on every morph.io container
+  as [part of the build process](https://github.com/openaustralia/buildstep/blob/master/Dockerfile).
+  You can use Google Chrome directly by running it with `google-chrome --headless --disable-gpu` or
+  you can control it via WebDriver with [ChromeDriver](https://sites.google.com/a/chromium.org/chromedriver/)
+  which is installed on morph.io at `/usr/local/bin/chromedriver`.
+
+%h4 Usage
+= render "language_tabs", id_prefix: "using_chrome_headless", path: "documentation/chrome_headless"
+
+%h3 Using PhantomJS (deprecated)
+:markdown
+  You can control PhantomJS from your scraper using JavaScript or a wrapper library.
+  The PhantomJS binary, `/usr/bin/phantomjs`, is installed on morph.io as part of the `phantomjs` Ubuntu package, which is installed in every scraper container as [part of the build process](https://github.com/openaustralia/buildstep/blob/master/Dockerfile).
   On your own machine, you’ll need to [download and install the binary](http://phantomjs.org/download.html) yourself before you can run a scraper using PhantomJS.
 
-%h3 Usage
+%h4 Usage
 = render "language_tabs", id_prefix: "using_phantomjs", path: "documentation/phantomjs"
 
-= render "examples", full_names: ["openaustralia/example_ruby_phantomjs_scraper",
+= render "examples", full_names: ["openaustralia/example_ruby_chrome_headless_scraper",
+                                  "openaustralia/example_ruby_phantomjs_scraper",
                                   "tmtmtmtm/cabo-verde-assembleia-nacionale",
                                   "wfdd/inatsisartut-scraper"]
